# dirs

./: .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  bors.toml  release.toml
.github/workflows/: main.yml
directories/: CHANGELOG.md  Cargo.toml  README.md  release.toml
directories/benches/: constructors.rs
directories/src/: lib.rs  lin.rs  mac.rs  wasm.rs  win.rs
dirs/: Cargo.toml  README.md
dirs-sys/: CHANGELOG.md  Cargo.toml  README.md  release.toml
dirs-sys/src/: lib.rs  xdg_user_dirs.rs
dirs/src/: android.rs  lib.rs  lin.rs  mac.rs  wasm.rs  win.rs
src/: lib.rs  lin.rs  mac.rs  wasm.rs  win.rs  xdg_user_dirs.rs
