[package]
name        = "dirs-sys-next"
version     = "0.1.0"
authors     = ["The @xdg-rs members"]
description = "system-level helper functions for the dirs and directories crates"
readme      = "README.md"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/xdg-rs/dirs-sys"

[badges]
maintenance = { status = "as-is" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "redox")'.dependencies]
redox_users = "0.3.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["knownfolders", "objbase", "shlobj", "winbase", "winerror"] }
