[package]
name        = "dirs-next"
version     = "1.0.0"
authors     = ["The @xdg-rs members"]
description = """
A tiny low-level library that provides platform-specific standard locations
of directories for config, cache and other data on Linux, Windows, macOS
and Redox by leveraging the mechanisms defined by the XDG base/user
directory specifications on Linux, the Known Folder API on Windows,
and the Standard Directory guidelines on macOS.
"""
readme      = "README.md"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/xdg-rs/dirs"
keywords    = ["xdg", "basedir", "app_dirs", "path", "folder"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
cfg-if = "=0.1.9"
dirs-sys-next = "0.1"
