[package]
name        = "dirs-sys-next"
version     = "0.1.2"
authors     = ["The @xdg-rs members"]
description = "system-level helper functions for the dirs and directories crates"
edition     = "2018"
readme      = "README.md"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/xdg-rs/dirs/tree/master/dirs-sys"
include = [
    '/CHANGELOG.md',
    '/Cargo.toml',
    '/LICENSE-*',
    '/README.md',
    '/src',
]

[badges]
maintenance = { status = "as-is" }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", optional = true }

[target.'cfg(target_os = "redox")'.dependencies]
redox_users = { version = "0.4.0", default-features = false }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["knownfolders", "objbase", "shlobj", "winbase", "winerror"] }

[features]
default = ["getpwuid"]

# Default features, except follow the behavior of libxdg-basedir, which does
# not fall back to `getpwuid_r`.
default_xdg = []

# Enable this to have dirs-sys call `getpwuid_r` as a fallback in case `HOME`
# is unset or empty.
getpwuid = ["libc"]
