[package]
name        = "dirs-next"
version     = "2.0.0"
authors     = ["The @xdg-rs members"]
description = """
A tiny low-level library that provides platform-specific standard locations
of directories for config, cache and other data on Linux, Windows, macOS
and Redox by leveraging the mechanisms defined by the XDG base/user
directory specifications on Linux, the Known Folder API on Windows,
and the Standard Directory guidelines on macOS.
"""
edition     = "2018"
readme      = "README.md"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/xdg-rs/dirs"
keywords    = ["xdg", "basedir", "app_dirs", "path", "folder"]
include = [
    'CHANGELOG.md',
    'Cargo.toml',
    'LICENSE-APACHE',
    'LICENSE-MIT',
    'README.md',
    '/src/',
]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]

[dependencies.dirs-sys-next]
version = "0.1"
path = "../dirs-sys"
default-features = false

[features]
default = ["dirs-sys-next/default"]

# Default features, except follow the behavior of libxdg-basedir, which does
# not fall back to `getpwuid_r`.
default_xdg = ["dirs-sys-next/default_xdg"]

# Enable this to have dirs-sys call `getpwuid_r` as a fallback in case `HOME`
# is unset or empty.
getpwuid = ["dirs-sys-next/getpwuid"]
